# Flare

./: .gitignore  CMakeLists.txt  main.cpp
libflare/includes/: dummy.h  flare.h  io.h  window.h
libflare/sources/: io.cpp  window.cpp
libflare/sources/debug/: debug.h
libs/: FindGLM.cmake  libs.cmake
sources/: dummy.cpp
